k8s/manifests/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lista-tarefas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: lista-tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pfabianofilho/front-lista-tarefas:v1
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lista-tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: pfabianofilho/back-lista-tarefas:v1
          ports:
            - containerPort: 8080
